--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -21,7 +21,7 @@ jobs:
           bundler-cache: true
       - name: Install Rubocop
         working-directory: ${{env.api-dir}}
-        run: gem install rubocop -v 1.28
+        run: gem install rubocop-ast:1.17.0 rubocop:1.28
       - name: Check Rubocop Styles
         working-directory: ${{env.api-dir}}
         run: rubocop
